--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "^15.1.7",
     "postcss": "^8",
     "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1",
